[package]
name = "simple-diagnostics"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# I18n is built-in, not optional
simple_i18n = { path = "../i18n" }

# Serialization for JSON formatter
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
