[package]
name = "simple-driver"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lints]
workspace = true

[[bin]]
name = "simple"
path = "src/main.rs"

[build-dependencies]
walkdir = "2"

[dependencies]
simple-loader = { path = "../loader" }
simple-native-loader = { path = "../native_loader" }
simple-term-io = { path = "../lib" }
simple-compiler = { path = "../compiler" }
simple-parser = { path = "../parser" }
simple-runtime = { path = "../runtime" }
simple-common = { path = "../common" }
simple-log = { path = "../../log" }
simple-pkg = { path = "../pkg" }
tempfile = "3"
walkdir = "2"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
rustyline = "14"
dirs-next = "2"
chrono = { version = "0.4", features = ["serde"] }
jj-lib = { version = "0.36.0", optional = true }
jj-cli = { version = "0.36.0", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
simple-dependency-tracker = { path = "../dependency_tracker" }
ctor = "0.2"

[features]
jj-lib = ["dep:jj-lib"]
jj-cli = ["dep:jj-cli"]
