[package]
name = "simple-driver"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lints]
workspace = true

[lib]
name = "simple_driver"
path = "src/lib.rs"

[[bin]]
name = "simple"
path = "src/main.rs"

[[bin]]
name = "gen-sspec-docs"
path = "../../src/bin/gen_sspec_docs.rs"

[build-dependencies]
walkdir = "2"

[dependencies]
simple-loader = { path = "../loader" }
simple-native-loader = { path = "../native_loader" }
simple-term-io = { path = "../lib" }
simple-compiler = { path = "../compiler" }
simple-parser = { path = "../parser" }
simple-runtime = { path = "../runtime" }
simple-common = { path = "../common" }
simple-log = { path = "../../log" }
simple-pkg = { path = "../pkg" }
simple-wasm-runtime = { path = "../wasm-runtime", optional = true }
simple-sdn = { path = "../sdn" }
simple_i18n = { path = "../i18n" }

# Workaround for Wasmer probestack linker issue
# https://github.com/wasmerio/wasmer/issues/3857
[target.'cfg(not(target_env = "msvc"))'.dependencies]
compiler_builtins = { version = "0.1", optional = true }

tempfile = "3"
walkdir = "2"
notify = "6"
serde.workspace = true
serde_json = "1"
tracing = "0.1"
rustyline = "14"
dirs-next = "2"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"  # For Ctrl-C signal handling
parking_lot.workspace = true  # For lazy init infrastructure (#1996)
paste = "1"  # For lazy_static! macro identifier concatenation
indexmap.workspace = true
jj-lib = { version = "0.36.0", optional = true }
jj-cli = { version = "0.36.0", optional = true }

# TUI stack (optional, enabled with 'tui' feature)
crossterm = { version = "0.28", optional = true }
ratatui = { version = "0.29", optional = true }

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winnt", "handleapi", "processthreadsapi", "minwindef"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
simple-dependency-tracker = { path = "../dependency_tracker" }
ctor = "0.2"
portable-pty = "0.8"

[features]
jj-lib = ["dep:jj-lib"]
jj-cli = ["dep:jj-cli"]
wasm = ["dep:simple-wasm-runtime", "simple-wasm-runtime/wasm", "simple-compiler/wasm", "compiler_builtins"]
wasm-wasi = ["wasm", "simple-compiler/wasm-wasi"]
tui = ["dep:crossterm", "dep:ratatui"]
pytorch = ["simple-runtime/pytorch"]
web_tests = [] # Enable web framework integration tests
