[package]
name = "simple-embedded"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedded/bare-metal startup and runtime for Simple language"

[lib]
test = false  # no_std crate - tests disabled

[lints]
workspace = true

[features]
default = []

# Target architectures
arm-cortex-m = []
arm-cortex-m0 = ["arm-cortex-m"]
arm-cortex-m3 = ["arm-cortex-m"]
arm-cortex-m4 = ["arm-cortex-m", "has-fpu"]
arm-cortex-m7 = ["arm-cortex-m", "has-fpu"]
riscv32 = []
riscv64 = []

# Hardware capabilities
has-fpu = []        # Target has floating-point unit

# Runtime features
alloc = []          # Enable heap allocation (bump allocator)
panic-halt = []     # Halt on panic (default behavior)
panic-reset = []    # Reset on panic
custom-panic = []   # Enable custom panic hook support

# Minimal variants for constrained environments
no-float = []       # Disable all floating-point operations
no-alloc = []       # Disable all heap allocation (static-only)
no-thread = []      # Disable threading/concurrency primitives
no-gc = []          # Disable garbage collection (manual memory only)

# Preset profiles combining restrictions
minimal = ["no-float", "no-alloc", "no-thread", "no-gc"]  # Most restricted
embedded-tiny = ["no-float", "no-alloc", "no-gc"]         # For <16KB RAM
embedded-small = ["no-gc"]                                 # For <64KB RAM

[dependencies]
# No dependencies - this is a standalone no_std crate

[build-dependencies]
