[package]
name = "simple_i18n"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
thiserror = "2.0"
simple-parser = { path = "../parser" }
phf = { version = "0.11", features = ["macros"] }

[build-dependencies]
phf_codegen = "0.11"

[dev-dependencies]
tempfile = "3.14"
