[package]
name = "simple-loader"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
simple-common = { path = "../common" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_Memory",
] }

[dev-dependencies]
tempfile = "3"
