[package]
name = "simple-parser"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true

# Infrastructure & Dependencies (#825-849)
# String Interning (#813-814)
lasso.workspace = true           # Thread-safe string interning (67% memory reduction)

# Hashing (#836-839)
ahash.workspace = true           # Fast hashing for identifier lookups

# Data Structures (#840-845)
typed-arena.workspace = true     # Arena allocation for AST nodes
smallvec.workspace = true        # Stack-local small vectors

# I/O (#846-849)
memmap2.workspace = true         # Memory-mapped file reading (15% faster)

[dev-dependencies]
pretty_assertions = "1.4"
