[package]
name = "simple-runtime"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

# Build both static library (rlib) and dynamic library (cdylib)
# - rlib: Used for static linking (default, zero runtime cost)
# - cdylib: Used for dynamic linking (.so/.dylib/.dll)
[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["cpu-simd"]
cpu-simd = ["rayon"]

[dependencies]
abfall = "0.1"
simple-common = { path = "../common" }
tracing = "0.1"
lazy_static = "1.4"
# Networking dependencies
socket2 = "0.5"  # Low-level socket control
ureq = "2.10"    # HTTP client (blocking, simple)
# CPU parallel execution (TBB-style work-stealing scheduler)
rayon = { version = "1.10", optional = true }

# Infrastructure & Dependencies (#825-849)
# Allocators (#825-827)
mimalloc.workspace = true        # Fast thread-local allocator

# Threading & Concurrency (#828-832)
parking_lot.workspace = true     # Fast locks (2-3x faster than std::sync)
crossbeam.workspace = true       # Advanced concurrency utilities
dashmap.workspace = true         # Concurrent collections

# Hashing (#836-839)
ahash.workspace = true           # Fast hashing
