[package]
name = "simple-stub"
version = "0.1.0"
edition = "2021"
description = "Minimal executable stub for Simple settlement executables"

[lints]
workspace = true

[[bin]]
name = "simple-stub"
path = "src/main.rs"

[dependencies]
simple-loader = { path = "../loader" }

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization
strip = true         # Strip symbols
panic = "abort"      # Smaller panic handling
codegen-units = 1    # Better optimization
