[package]
name = "tls-test-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tls_test_server"
path = "src/main.rs"

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rcgen = { version = "0.13", features = ["pem"] }
ring = "0.17"
